# comp_graphics

./: laba2.py  laba3.py  laba4.py  main.py
laba1_opengl/: CMakeLists.txt
laba1_opengl/src/: main.cpp
